syntax = "proto3";

package receiver;

message MessageId {
  int64 message_id = 1;
}

message Reject {
  MessageId id = 1;
  bool requeue = 2;
}

message ReceiverResponse {
  map<string, string> filters = 1;
  string destination = 2;
  bytes content = 3;
  bool is_a_redelivery = 4;
  int64 message_id = 5;
}

message ReceiverArgs {
  string queue_name = 1;
}

message ActionStatus {
  bool status = 1;
}

service Receiver {
  rpc AcknowledgeMessage(MessageId) returns (ActionStatus) {}
  rpc RejectMessage(Reject) returns (ActionStatus) {}
  rpc Receive(ReceiverArgs) returns (stream ReceiverResponse) {}
}
